added material designs and icons

--- a/public/styles.css
+++ b/public/styles.css
@@ -5,22 +5,24 @@
 }
 html {
   font-family: "Montserrat", sans-serif;
+  overflow-x: hidden;
 }
 body {
   background: #eee;
-  padding: 0 16px;
+  background-image: url("https://www.transparenttextures.com/patterns/gplay.png"); 
 }
 
 header {
   background-color: #f5ba13;
   margin: auto -16px;
   padding: 16px 32px;
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.4);
 }
 
 header h1 {
   color: #fff;
   font-family: "McLaren", cursive;
+  margin-left: 16px;
   font-weight: 200;
 }
 
@@ -33,15 +35,15 @@ footer {
 }
 
 footer p {
-  color: #ccc;
+  color: black;
 }
 .note {
   background: #fff;
   border-radius: 7px;
   box-shadow: 0 2px 5px #ccc;
-  padding: 10px;
+  padding: 15px;
   width: 240px;
-  margin: 16px;
+  margin: 20px;
   float: left;
 }
 .note h1 {
@@ -59,8 +61,9 @@ footer p {
   position: relative;
   float: right;
   margin-right: 10px;
-  color: #f5ba13;
-  background-color: transparent;
+  color: white;
+  background-color: #f5ba13;
+  border-radius: 50%;
   border: none;
   width: 36px;
   height: 36px;
@@ -68,7 +71,7 @@ footer p {
   outline: none;
 }
 
-form {
+form.create-note {
   position: relative;
   width: 480px;
   margin: 30px auto 20px auto;
@@ -77,8 +80,8 @@ form {
   border-radius: 7px;
   box-shadow: 0 1px 5px rgb(138, 137, 137);
 }
-form input,
-form textarea {
+form.create-note input,
+form.create-note textarea {
   width: 100%;
   border: none;
   padding: 4px;
@@ -87,7 +90,7 @@ form textarea {
   font-family: inherit;
   resize: none;
 }
-form button {
+form.create-note button {
   position: absolute;
   right: 18px;
   bottom: -18px;
